Fixed buttons staying dark after clicking on mobile

--- a/public/global.css
+++ b/public/global.css
@@ -63,7 +63,8 @@ button:disabled {
 	cursor: auto;
 }
 
-button:not(:disabled):hover,
-button:not(:disabled):active {
-	opacity: 0.5;
+@media (hover: hover) {
+	button:not(:disabled):hover {
+		opacity: 0.75;
+	}
 }
